--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<label for = "First_Name">Welcome to the world of Web development</label>
+		<input type = "text" id="text" placeholder="Welcome to the world of Web development">
 
 		</div>
 	
