--- a/main.html
+++ b/main.html
@@ -8,10 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-		<input type = "text" id="text" placeholder="Welcome to the world of Web development">
-
-		</div>
+	<div id="text">Welcome to the world of Web development</div>
 	
 
 
